Fixing jquery missing in tests

--- a/tests/index.html
+++ b/tests/index.html
@@ -51,7 +51,7 @@
 		</div>
 	</div>
 
-	<script src="../js/vendor/jquery.min.js"></script>
+	<script src="libs/jquery.js"></script>
 	<script src="mocha/chai.js"></script>
 	<script src="mocha/chai-spies.js"></script>
 	<script src="mocha/mocha.js"></script>
